F248 Fix modernizer flagged items
Apply all the suggestions from modernizer-maven-plugin. Enable the
failOnViolations flag to prevent future issues.